2001-01-19  Braden McDaniel  <braden@endoframe.com>

        * Fixed misidentified token ID constant in `Vrml97Scanner.cpp'.
          Due to a typo, the identifiers for SFColor and MFColor had
          been given the same value. Thanks to Tom Flynn for reporting
          the bug.

2001-01-14  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Update Makefiles, Project files and Workspace files to build
          (WIN32) for new OpenVRML structure.

        * Fixed undefined symbol problems while making "lookat" in
          debug mode using microsoft DevStudio.
          

2001-01-10  Braden McDaniel  <braden@endoframe.com>

        * Fixed something gcc shouldn't have allowed me to compile in
          PixelTexture rescaling. (I was trying to allocate an an array
          on the stack with a size that wasn't a const-expression.)

        * Reverted VrmlMFString's member to "char * *" from
          "const char * *". Visual C++ apparently has problems deleting
          const objects. Not sure what the standard has to say about
          this. After some reflection, this change is probably the Right
          Thing anyway. Stylistically, at the very least, deleting a
          const object would seem to be Bad.

        * Added include of <assert.h> to `ScriptJS.cpp'.

        * Added include of <assert.h> to `VrmlNodeScript.cpp'.

2001-01-03  Braden McDaniel  <braden@endoframe.com>

        * Removed single-value constructor from VrmlMF*. It is
          unnecessary since the array constructor can be used with a
          single value, and with types like VrmlMFFloat, VrmlMFTime,
          and especially VrmlMFInt32, it has the potential to create
          ambiguous code since the array constructor can be used with
          a single value as well (to indicate the number of values the
          new object should hold).

        * Fixed a minor bug with the default Extrusion.

2001-01-01  Braden McDaniel  <braden@endoframe.com>
